Add tests for loaderLookup/restricted method corner cases